test/tests/NonParameterizedGeneric2.expected
NonParameterizedGeneric2.panda:4:22: error: 'panda.collections.List' expected 1 generic parameter, but found 0
1 error
