test/tests/NonParameterizedGeneric2.panda
class NonParameterizedGeneric2 { 
    @class
    method main() {
        def error := List()
    }
}